--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,35 @@
 @tailwind utilities;
 
 #root {
-	margin: 60px;
+	margin: 0px;
 	padding: 0;
+}
+
+body {
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	z-index: 0;
+}
+
+@media (min-width: 640px) {
+	body {
+		max-width: 640px;
+	}
+}
+@media (min-width: 768px) {
+	body {
+		max-width: 768px;
+	}
+}
+@media (min-width: 1024px) {
+	body {
+		max-width: 1024px;
+	}
+}
+@media (min-width: 1280px) {
+	body {
+		max-width: 1280px;
+	}
 }
